--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -6,8 +6,8 @@
     
         <form id="filterForm" method="get" action="" class="flex flex-col flex-wrap sm:flex-row gap-2 md:items-end">
             <div>
-                <h3 class="sr-only">Filter by Author</h3>
-                <label for="author" class="block text-sm font-medium text-white mb-1">Author:</label>
+                <h3 class="sr-only">{% trans "Filter by Author" %}</h3>
+                <label for="author" class="block text-sm font-medium text-white mb-1">{% trans "Author:" %}</label>
                 <div class="flex flex-wrap gap-2">
                     {% for author in authors %}
                     <button type="button" name="author" value="{{ author.username }}" title="{% user_display_name author %}" class="flex bg-white justify-center items-center border-4 aspect-square rounded-full shadow-sm {% if request.GET.author == author.username %} border-yellow-500 {% else %} border-transparent {% endif %}">
@@ -26,38 +26,38 @@
             </div>
         
             <div>
-                <h3 class="sr-only">Filter by Date</h3>
+                <h3 class="sr-only">{% trans "Filter by Date" %}</h3>
                 <div class="flex flex-wrap gap-2">
                     <div>
-                        <label for="date_from" class="block text-sm font-medium text-white mb-1">From:</label>
+                        <label for="date_from" class="block text-sm font-medium text-white mb-1">{% trans "From:" %}</label>
                         <input type="date" id="date_from" name="date_from" value="{{ request.GET.date_from }}" class="mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 min-w-36">
                     </div>
                     <div>
-                        <label for="date_to" class="block text-sm font-medium text-white mb-1">To:</label>
+                        <label for="date_to" class="block text-sm font-medium text-white mb-1">{% trans "To:" %}</label>
                         <input type="date" id="date_to" name="date_to" value="{{ request.GET.date_to }}" class="mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 min-w-36">
                     </div>
                 </div>
             </div>
 
             <div class="max-w-xs">
-                <h3 class="sr-only">Search term</h3>
-                <label for="query" class="block text-sm font-medium text-white mb-1">Search:</label>
-                <input type="query" id="query" name="query" placeholder="Search for blog post..." value="{{ request.GET.query }}" class="px-2 mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 min-w-36">
+                <h3 class="sr-only">{% trans "Search term" %}</h3>
+                <label for="query" class="block text-sm font-medium text-white mb-1">{% trans "Search:" %}</label>
+                <input type="query" id="query" name="query" placeholder="{% trans 'Search for blog post...' %}" value="{{ request.GET.query }}" class="px-2 mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 min-w-36">
             </div>
 
             <div class="flex justify-end self-end ml-auto items-center gap-4 md:gap-2 mt-4 md:mt-0 w-full md:w-auto">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded transition opacity-50 cursor-not-allowed" id="submitButton" disabled="false">
-                    Search
+                    {% trans "Search" %}
                     <span>&rarr;</span>
                 </button>
                 <a href="{% pageurl page %}" class="bg-slate-300 text-gray-700 px-4 py-2 rounded transition {% if not active_filters %} opacity-50 cursor-not-allowed {% else %} hover:bg-slate-200 {% endif %}" id="resetButton">
-                    Reset
+                    {% trans "Reset" %}
                     <span>&times;</span>
                 </a>
             </div>
         </form>
         {% if context.active_filters %}
-        <span>Active filters exist</span>
+        <span>{% trans "Active filters exist" %}</span>
         {% endif %}
     </div>
 </div>
