fix: Update filter bar template to load internationalization tags

--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags wagtailimages_tags user_tags %}
+{% load i18n wagtailcore_tags wagtailimages_tags user_tags %}
 
 <div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full mx-auto drop-shadow-lg">
 
