fix: Update drinks statistics template to load internationalization tags

--- a/src/drinks/templates/drinks-statistics.html
+++ b/src/drinks/templates/drinks-statistics.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static wagtailimages_tags user_tags %}
+{% load i18n static wagtailimages_tags user_tags %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
